@@ -1,4 +1,4 @@
-.TH HDPARM 8 "November 2008" "Version 9.1"
+.TH HDPARM 8 "November 2008" "Version 9.2"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
