@@ -1,3 +1,5 @@
+hdparm-9.2
+	- fix WWN output from -I
 hdparm-9.1
 	- tidy up output from --dco-identify, add more info to manpage
 	- add kernel (device driver) bug detection/warning to -N output
